[gd_scene load_steps=9 format=3 uid="uid://dcawjb727xk6t"]

[ext_resource type="Script" path="res://Scripts/SceneInteract.gd" id="1_brsdo"]
[ext_resource type="Texture2D" uid="uid://b22atet2x7x10" path="res://Assets/Picable/SceneIcon.png" id="2_wl5ro"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_83suv"]
size = Vector2(26, 23)

[sub_resource type="Animation" id="Animation_q3on4"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SceneIcon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, -1), Vector2(1, -3), Vector2(1, -1)]
}

[sub_resource type="Animation" id="Animation_f4kes"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SceneIcon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, -1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ygxhj"]
_data = {
"RESET": SubResource("Animation_f4kes"),
"idle": SubResource("Animation_q3on4")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a7to3"]
size = Vector2(50, 26)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6dd03"]
size = Vector2(35, 23)

[node name="SceneSwitcher" type="Node2D"]
script = ExtResource("1_brsdo")

[node name="ChangerCollision" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="ChangerCollision"]
shape = SubResource("RectangleShape2D_83suv")

[node name="SceneIcon" type="Sprite2D" parent="."]
position = Vector2(1, -1)
texture = ExtResource("2_wl5ro")

[node name="SceneAnimator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ygxhj")
}

[node name="LeftVisibleBox" type="Area2D" parent="."]

[node name="VisibleBoxCollision" type="CollisionShape2D" parent="LeftVisibleBox"]
position = Vector2(-16, -1)
shape = SubResource("RectangleShape2D_a7to3")
debug_color = Color(0.483912, 0.584765, 0.116199, 0.42)

[node name="ChargeBox" type="Area2D" parent="."]

[node name="SceneBoxCollision" type="CollisionShape2D" parent="ChargeBox"]
position = Vector2(7.5, -1.5)
shape = SubResource("RectangleShape2D_6dd03")
debug_color = Color(0.908388, 0.265303, 0.367016, 0.42)

[node name="ChargeTimer" type="Timer" parent="."]

[connection signal="body_entered" from="LeftVisibleBox" to="." method="_on_left_visible_box_body_entered"]
[connection signal="body_exited" from="LeftVisibleBox" to="." method="_on_left_visible_box_body_exited"]
[connection signal="body_entered" from="ChargeBox" to="." method="_on_charge_box_body_entered"]
[connection signal="timeout" from="ChargeTimer" to="." method="_on_charge_timer_timeout"]
